--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "framer-motion": "^10.16.0"
+    "framer-motion": "^10.16.0",
+    "date-fns": "^2.30.0"
   }
 }
